<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tw__solid_white"
    android:orientation="vertical"
    tools:context=".CalendarActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="KillDDL "
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColor="#000"/>
                <Button
                    android:id="@+id/signoutButton"
                    android:layout_width="70dp"
                    android:layout_gravity="right"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:backgroundTint="#4D90FE"
                    android:layout_height="45dp"
                    android:text="Sign Out"
                    android:textSize="10dp"
                    android:layout_margin="0dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="KillDDl"-->
        <!--android:gravity="center"-->
        <!--android:textColor="#FFF"-->
        <!--android:textSize="30dp"/>-->



    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/monthlyButton"
            android:layout_width="100dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:backgroundTint="#4D90FE"
            android:layout_height="48dp"
            android:text="Monthly"
            android:layout_margin="0dp"
            />
        <Button
            android:id="@+id/dailyButton"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="Daily"
            android:layout_margin="0dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="Month"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#000"
        android:id="@+id/month"/>


    <LinearLayout
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content">


        <com.github.sundeepk.compactcalendarview.CompactCalendarView

            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/calendarView"
            android:layout_width="fill_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="220dp"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextSize="12sp"
            app:compactCalendarTextColor="#000"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#CCCCCC"
            app:compactCalendarCurrentDayTextColor="#000"
            app:compactCalendarCurrentDayBackgroundColor="#4D90FE"
            app:compactCalendarMultiEventIndicatorColor="#F2B50F"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="#f2f2f2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deadlineTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="This Month"
            android:textColor="#000"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <!--<ListView-->
                <!--android:id="@+id/deadlineList"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp"-->
                <!--android:layout_marginTop="5dp"-->
                <!--/>-->

            <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/deadlineList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_button_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp" />
    </LinearLayout>


</LinearLayout>